--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #b7d6d1; }
+  background: #f74222; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #84614e; }
+  background: #3595dc; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #c725ed; }
+  background: #b99f8c; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #1a9a1e; }
+  background: #4e6272; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7f4b0f; }
+  background: #252761; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #3d7de3; }
+  background: #d37cd2; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #1e4a16; }
+  background: #8d4d9d; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #3da0b9; }
+  background: #d4240c; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #926ad7; }
+  background: #6e22b4; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #85cbf4; }
+  background: #074c78; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #df1376; }
+  background: #21d2ee; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #37b44f; }
+  background: #98a68d; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #2552d7; }
+  background: #b1130f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #962703; }
+  background: #3a7a5a; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #43fb8f; }
+  background: #55e711; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #09e99e; }
+  background: #1dd326; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #ce5293; }
+  background: #514287; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #265ce7; }
+  background: #5d8d5b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #a27b44; }
+  background: #01a7fd; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #3ca7be; }
+  background: #f05621; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #6e59ff; }
+  background: #a96113; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #96d41b; }
+  background: #d1dba5; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #db8224; }
+  background: #86852b; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #a8e657; }
+  background: #410ea3; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f1a463; }
+  background: #0a55cd; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #f52b67; }
+  background: #ef5fbb; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #87942b; }
+  background: #f745a7; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #3fdd5a; }
+  background: #31f54c; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #a4d392; }
+  background: #93f024; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #bb6173; }
+  background: #1140f3; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #4851cc; }
+  background: #e0209c; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #d12ace; }
+  background: #970973; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #d822dd; }
+  background: #1d62f6; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #fa7af5; }
+  background: #3186a7; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #4e3976; }
+  background: #ce5a0f; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #d713e7; }
+  background: #5da097; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #a178ea; }
+  background: #78b60a; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #085c4b; }
+  background: #e541bd; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #a5a4f6; }
+  background: #e8a25a; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #8a3722; }
+  background: #41bfeb; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #787321; }
+  background: #5ac3ac; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e03dcb; }
+  background: #b5bb2b; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #1c2ad7; }
+  background: #d87c21; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #762d0b; }
+  background: #66c5a7; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #4860bb; }
+  background: #bbfdc8; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #f642d7; }
+  background: #d7095b; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #c642f5; }
+  background: #28d704; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #b34368; }
+  background: #86f1c3; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #b5b81f; }
+  background: #a613ad; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #69f682; }
+  background: #947318; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #e9d2d3; }
+  background: #810e33; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #0c2a7b; }
+  background: #5d5702; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #a80e2a; }
+  background: #ce953d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #2cc50e; }
+  background: #53bd28; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #3008b2; }
+  background: #661d1b; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #330fd0; }
+  background: #4ed8e9; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #2c560f; }
+  background: #4c72b9; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #c7f659; }
+  background: #69c677; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #25339c; }
+  background: #86f5b2; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #1a8347; }
+  background: #b3b517; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #e578b7; }
+  background: #815202; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #beb228; }
+  background: #86de61; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #f4a6d7; }
+  background: #8e82e0; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #9f2671; }
+  background: #c7bbd3; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ae8e1a; }
+  background: #3ebaa6; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #11e61f; }
+  background: #b8f1e5; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #cb5f78; }
+  background: #2ff221; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #5dae95; }
+  background: #b3db08; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #f1112c; }
+  background: #62a903; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #01ed2c; }
+  background: #1ab624; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #609421; }
+  background: #25cb23; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #b983d2; }
+  background: #d20cbc; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #dc9a85; }
+  background: #65bb30; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #8399e3; }
+  background: #a8222a; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #231428; }
+  background: #6cd9b0; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #6103cf; }
+  background: #31f630; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #5ccb49; }
+  background: #1960f4; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #28dd54; }
+  background: #484f3f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #253ac7; }
+  background: #9df7bd; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #594231; }
+  background: #021031; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #62b57b; }
+  background: #faf91e; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #f937d3; }
+  background: #52b2f4; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #68b42e; }
+  background: #8ebad7; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #dc6eae; }
+  background: #e4658a; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b0032e; }
+  background: #2999d0; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #cb48d1; }
+  background: #11e9c3; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #3e3de5; }
+  background: #a2d9c9; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #2fa67e; }
+  background: #d4b718; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #10c7da; }
+  background: #3801d7; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #25792f; }
+  background: #ec28b2; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #194433; }
+  background: #b4f8d4; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #6172be; }
+  background: #c684bf; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #21c6d5; }
+  background: #76fcc7; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #654fa8; }
+  background: #10e6b7; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #488e91; }
+  background: #c4aa81; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #6a111b; }
+  background: #d40591; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #3ef9dc; }
+  background: #7abec6; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #514fc9; }
+  background: #9aaed1; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #f1a7b1; }
+  background: #991e88; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #0dbd7e; }
+  background: #4864fc; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10581,6 +10581,8 @@ table .bold-heading {
   background: rgba(227, 227, 227, 0.25);
   overflow: hidden;
   margin-top: 20px; }
+.widget-slider .carousel-inner {
+  height: calc(100vh - 12px) !important; }
 
 .dropdown-select-native select {
   color: #6c757d;
@@ -10641,9 +10643,45 @@ table .bold-heading {
 
 .inner-legend-colors-col {
   display: grid;
-  grid-template-columns: 155px 1fr;
+  grid-template-columns: 85px 1fr;
   align-items: center;
   grid-gap: 20px; }
+  .inner-legend-colors-col .dropdown-with-img {
+    width: 60px; }
+    .inner-legend-colors-col .dropdown-with-img .dropdown-logo {
+      margin-right: 0px; }
+      .inner-legend-colors-col .dropdown-with-img .dropdown-logo .yellow-box {
+        width: 18px;
+        height: 18px; }
+      .inner-legend-colors-col .dropdown-with-img .dropdown-logo .green-box {
+        width: 18px;
+        height: 18px; }
+  .inner-legend-colors-col .dropdown .dropdown-toggle {
+    width: 90% !important; }
+  .inner-legend-colors-col .dropdown .dashboard-title-menu-dropdown {
+    height: 120px;
+    overflow-x: hidden; }
+    .inner-legend-colors-col .dropdown .dashboard-title-menu-dropdown .dropdown-with-logos {
+      width: auto !important;
+      height: auto;
+      padding: 5px;
+      border: 0px solid #bababa !important; }
+      .inner-legend-colors-col .dropdown .dashboard-title-menu-dropdown .dropdown-with-logos li {
+        display: grid;
+        grid-template-columns: repeat(5, auto);
+        grid-gap: 10px;
+        padding: 2px;
+        border: 0px solid #bababa !important; }
+        .inner-legend-colors-col .dropdown .dashboard-title-menu-dropdown .dropdown-with-logos li a {
+          padding: 0px;
+          width: 18px; }
+        .inner-legend-colors-col .dropdown .dashboard-title-menu-dropdown .dropdown-with-logos li a:last-child {
+          border: 0px solid #776FFF;
+          padding: 0px;
+          margin: 0px;
+          text-align: inherit;
+          border-radius: 0px;
+          color: inherit; }
 
 .modal-add-connections-wrapper .inner-legend-colors-col select {
   width: 136px;
