--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f74222; }
+  background: #0c2eee; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #3595dc; }
+  background: #d38dfd; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #b99f8c; }
+  background: #8b73ee; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #4e6272; }
+  background: #7f94c3; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #252761; }
+  background: #9de464; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d37cd2; }
+  background: #1858fa; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #8d4d9d; }
+  background: #a21aac; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #d4240c; }
+  background: #b3fe82; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #6e22b4; }
+  background: #981620; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #074c78; }
+  background: #de38b1; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #21d2ee; }
+  background: #2a155c; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #98a68d; }
+  background: #a1f3f8; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #b1130f; }
+  background: #286319; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #3a7a5a; }
+  background: #bbb249; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #55e711; }
+  background: #cd631f; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #1dd326; }
+  background: #5c2618; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #514287; }
+  background: #f2c80d; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #5d8d5b; }
+  background: #43f2b0; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #01a7fd; }
+  background: #527f97; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f05621; }
+  background: #f70cde; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #a96113; }
+  background: #4d7343; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #d1dba5; }
+  background: #a3ac55; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #86852b; }
+  background: #b59f91; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #410ea3; }
+  background: #02beaf; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #0a55cd; }
+  background: #bb80a7; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #ef5fbb; }
+  background: #cb689f; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #f745a7; }
+  background: #9dd77d; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #31f54c; }
+  background: #8a6c1a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #93f024; }
+  background: #8fbe06; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #1140f3; }
+  background: #2c384b; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #e0209c; }
+  background: #be0f6d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #970973; }
+  background: #7cfa79; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #1d62f6; }
+  background: #86411b; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #3186a7; }
+  background: #472ee2; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #ce5a0f; }
+  background: #b1b98d; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #5da097; }
+  background: #b5b08c; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #78b60a; }
+  background: #6e41c8; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e541bd; }
+  background: #d32e3f; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #e8a25a; }
+  background: #243873; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #41bfeb; }
+  background: #1a7108; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #5ac3ac; }
+  background: #02c967; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #b5bb2b; }
+  background: #3ce04e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #d87c21; }
+  background: #a6c75f; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #66c5a7; }
+  background: #72c4c9; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #bbfdc8; }
+  background: #f86e3f; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #d7095b; }
+  background: #8b90c6; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #28d704; }
+  background: #aff66a; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #86f1c3; }
+  background: #80fae7; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a613ad; }
+  background: #b308e0; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #947318; }
+  background: #0897b5; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #810e33; }
+  background: #b3c54f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #5d5702; }
+  background: #a02f3d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #ce953d; }
+  background: #25df23; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #53bd28; }
+  background: #c08c8c; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #661d1b; }
+  background: #5919fa; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #4ed8e9; }
+  background: #c1b0c5; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #4c72b9; }
+  background: #43d58f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #69c677; }
+  background: #cd0c91; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #86f5b2; }
+  background: #588993; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #b3b517; }
+  background: #228e58; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #815202; }
+  background: #158a14; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #86de61; }
+  background: #5d92ba; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #8e82e0; }
+  background: #5d78bd; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c7bbd3; }
+  background: #cb7603; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #3ebaa6; }
+  background: #eb9231; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #b8f1e5; }
+  background: #e83ab2; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #2ff221; }
+  background: #ef4712; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b3db08; }
+  background: #c85f60; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #62a903; }
+  background: #76461b; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #1ab624; }
+  background: #bf4e8d; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #25cb23; }
+  background: #d26418; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #d20cbc; }
+  background: #5db24e; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #65bb30; }
+  background: #416568; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #a8222a; }
+  background: #e4f114; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #6cd9b0; }
+  background: #407d99; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #31f630; }
+  background: #7e8201; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #1960f4; }
+  background: #43e59c; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #484f3f; }
+  background: #cc4a63; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #9df7bd; }
+  background: #a728fa; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #021031; }
+  background: #2091fb; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #faf91e; }
+  background: #380477; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #52b2f4; }
+  background: #30ce33; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #8ebad7; }
+  background: #f1481a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #e4658a; }
+  background: #684295; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #2999d0; }
+  background: #c23699; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #11e9c3; }
+  background: #1d8591; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a2d9c9; }
+  background: #a0299e; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #d4b718; }
+  background: #5a45d2; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #3801d7; }
+  background: #7351a1; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #ec28b2; }
+  background: #e351cd; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #b4f8d4; }
+  background: #4a08e9; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c684bf; }
+  background: #c7e356; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #76fcc7; }
+  background: #3d5aa9; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #10e6b7; }
+  background: #d4a84c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #c4aa81; }
+  background: #9f3f24; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #d40591; }
+  background: #ff90be; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #7abec6; }
+  background: #c82aa8; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #9aaed1; }
+  background: #a07489; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #991e88; }
+  background: #9cabd4; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #4864fc; }
+  background: #0a1088; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10646,16 +10646,16 @@ table .bold-heading {
   grid-template-columns: 85px 1fr;
   align-items: center;
   grid-gap: 20px; }
+  .inner-legend-colors-col .dropdown-logo {
+    margin-right: 0px; }
+    .inner-legend-colors-col .dropdown-logo .yellow-box {
+      width: 18px !important;
+      height: 18px !important; }
+    .inner-legend-colors-col .dropdown-logo .green-box {
+      width: 18px !important;
+      height: 18px !important; }
   .inner-legend-colors-col .dropdown-with-img {
     width: 60px; }
-    .inner-legend-colors-col .dropdown-with-img .dropdown-logo {
-      margin-right: 0px; }
-      .inner-legend-colors-col .dropdown-with-img .dropdown-logo .yellow-box {
-        width: 18px;
-        height: 18px; }
-      .inner-legend-colors-col .dropdown-with-img .dropdown-logo .green-box {
-        width: 18px;
-        height: 18px; }
   .inner-legend-colors-col .dropdown .dropdown-toggle {
     width: 90% !important; }
   .inner-legend-colors-col .dropdown .dashboard-title-menu-dropdown {
@@ -10790,6 +10790,126 @@ table .bold-heading {
 
 .accordion-toggle span .img-plus-icon {
   display: none; }
+
+.c01 {
+  background: #1ABC9C;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c02 {
+  background: #16A085;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c03 {
+  background: #27AE60;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c04 {
+  background: #2ECC71;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c05 {
+  background: #75DDA7;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c06 {
+  background: #FC6170;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c07 {
+  background: #2980B9;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c08 {
+  background: #45B4D0;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c09 {
+  background: #C0392B;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c10 {
+  background: #D35400;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c11 {
+  background: #F1C40F;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c12 {
+  background: #F39C12;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c13 {
+  background: #9B59B6;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c14 {
+  background: #AB7698;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c15 {
+  background: #AB7698;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c16 {
+  background: #CC9988;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c17 {
+  background: #46D8D5;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c18 {
+  background: #F95D4D;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c19 {
+  background: #46D8D5;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
+
+.c20 {
+  background: #01A3FE;
+  width: 18px;
+  height: 18px;
+  display: inline-block; }
 
 @font-face {
   font-family: 'proxima-semi-bold';
